--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  - title: "Posts"
+    url: /year-archive/
   - title: "Resume"
     url: /assets/rsc/PublicResume_BL.pdf
     
