--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,10 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  comptia:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -290,3 +294,12 @@ defaults:
     values:
       layout: single
       author_profile: false
+
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
